2014-07-28  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (rising_product): Fix wrong m == n case,
	which breaks the n_perm_k function for k == 1.

	* txr.1: Fix typo: n-choose-k written in place of n-perm-k.

2014-07-27  Kaz Kylheku  <kaz@kylheku.com>

	Fix 2014-02-05 safety regression: unchecked use of non-function objects
	in some contexts that require functions.

	* lib.c (funcall, funcall1, funcall2, funcall3, funcall4):
	check type(fun) before dereferencing to see whether there
	are optional args.

2014-07-27  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (giterate_func, giterate): New static functions.
	(eval_init): Registered giterate as intrinsic.

	* txr.1: Documented giterate.

2014-07-26  Kaz Kylheku  <kaz@kylheku.com>

	* unwind.h (uw_block_begin): Get rid of the unused typedef trick,
	replace with do { } while (0), since we don't have any instances of a
	uw_block_begin followed by declarations.
	(uw_catch_begin): Move SYMVAR and EXCVAR inside the do/while block,
	so that the expansion doesn't begin with a declaration.

2014-07-23  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile, arith.c, arith.h, combi.c, combi.h, configure, debug.c,
	debug.h, eval.c, eval.h, filter.c, filter.h, gc.c, gc.h, hash.c,
	hash.h, lib.c, lib.h, match.c, match.h, parser.h, parser.l, parser.y,
	rand.c, rand.h, regex.c, regex.h, signal.c, signal.h, stream.c,
	stream.h, syslog.c, syslog.h, txr.c, txr.h, unwind.c, unwind.h,
	utf8.c, utf8.h: Synchronize license header with LICENSE.

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (subst_vars): Bugfix: I neglected to apply the
	filter which is in effect to the result of interpolating a TXR Lisp
	expression, oops!

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (METANUM): Forgotten %right declaration for this
	token has been resulting in a shift-reduce conflict.

2014-07-22  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Add a check, in the case that we cannot make an