@@ -443,6 +443,7 @@ val ldiff(val list1, val list2);
 val flatten(val list);
 val lazy_flatten(val list);
 val tuples(val n, val seq, val fill);
+val partition_by(val func, val seq);
 val memq(val obj, val list);
 val memql(val obj, val list);
 val memqual(val obj, val list);
