@@ -1,5 +1,16 @@
 2014-07-28  Kaz Kylheku  <kaz@kylheku.com>
 
+	* eval.c (eval_init): Register partition-by intrinsic.
+
+	* lib.c (partition_by_func): New static function.
+	(partition_by): New function.
+
+	* lib.h (partition_by): Declared.
+
+	* txr.1: Documented partition-by.
+
+2014-07-28  Kaz Kylheku  <kaz@kylheku.com>
+
 	* arith.c (rising_product): Fix wrong m == n case,
 	which breaks the n_perm_k function for k == 1.
 
